--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
     sdk: flutter
   http: ^0.13.5
   provider: ^6.0.5
+  shared_preferences: ^2.0.18
 
 dev_dependencies:
   flutter_test:
