--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   http: ^0.13.5
   provider: ^6.0.5
   shared_preferences: ^2.0.18
+  video_player: ^2.5.3
 
 dev_dependencies:
   flutter_test:
