--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   provider: ^6.0.5
   shared_preferences: ^2.0.18
   video_player: ^2.5.3
+  cached_network_image: ^3.2.0
 
 dev_dependencies:
   flutter_test:
