--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   shared_preferences: ^2.0.18
   video_player: ^2.5.3
   cached_network_image: ^3.2.0
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
